<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="?attr/actionBarSize"
        tools:context=".ui.fragments.PhotoFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/noPictureContainer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_medium"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/btUpdate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.4">

            <ImageView
                android:id="@+id/imNoPhoto"
                android:layout_width="@dimen/imgNoPhoto"
                android:layout_height="@dimen/imgNoPhoto"
                android:scaleType="centerInside"
                android:src="@drawable/nophoto"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_medium"
                android:gravity="center"
                android:text="@string/noPhotos"
                android:textSize="@dimen/description"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imNoPhoto"
                app:layout_constraintVertical_bias="0" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/PictureContainer"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="@dimen/margin_medium"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/btUpdate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerPhotos"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/progress"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="@dimen/margin_medium"
            app:layout_constraintBottom_toTopOf="@id/btUpdate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0">

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.getbase.floatingactionbutton.FloatingActionsMenu
            android:id="@+id/groupFloatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_big"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/ic_add"
            android:theme="@style/ThemeFloatingActionButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.getbase.floatingactionbutton.FloatingActionButton
                android:id="@+id/fabGallery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/FabOption"
                app:fab_icon="@drawable/ic_gallery"
                app:fab_title="@string/gallery" />

            <com.getbase.floatingactionbutton.FloatingActionButton
                android:id="@+id/fabCamera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/FabOption"
                app:fab_icon="@drawable/ic_camera"
                app:fab_title="@string/camera" />
        </com.getbase.floatingactionbutton.FloatingActionsMenu>

        <Button
            android:id="@+id/btUpdate"
            android:visibility="gone"
            tools:visibility="visible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>